feat: Customize popup text padding
use attr popupTextPadding, Only change whole paddings.

--- a/recyclerviewfastscroller/src/main/res/values/attrs.xml
+++ b/recyclerviewfastscroller/src/main/res/values/attrs.xml
@@ -24,5 +24,6 @@
         <attr name="trackMarginEnd" format="dimension" />
 
         <attr name="handleVisibilityDuration" format="integer" />
+        <attr name="popupTextPadding" format="dimension" />
     </declare-styleable>
 </resources>
